# kube-tag-radar

./: .gitignore  Cargo.toml  README.md  Tiltfile  build.rs
.github/workflows/: build.yml  release.yml
assets/: index.html
kubernetes/: config.env  config.yaml  deployment.yaml  kustomization.yaml  service-account.yaml  service.yaml
migrations/: 20250810095545_base.sql
src/: database.rs  log.rs  main.rs  observe.rs  serve.rs  settings.rs  update.rs
src/serve/: list.rs  metrics.rs
src/update/: image_id.rs  image_ids.rs  latest_image_version.rs  version.rs
